force-app/main/default/objects/ServiceContract/fields/ClockifyProjectID__c.field-meta.xml
<CustomField>
    <fullName>ClockifyProjectID__c</fullName>
    <externalId>true</externalId>
    <label>ClockifyProjectID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>