force-app/main/default/objects/ServiceContract/fields/Extra_Hours_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Extra_Hours_Permitted__c</fullName>
    <label>Extra_Hours_Permitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>