force-app/main/default/objects/ServiceContract/fields/MonthlyHoursPerContract__c.field-meta.xml
<CustomField>
    <fullName>MonthlyHoursPerContract__c</fullName>
    <label>Monthly Hours Per Contract</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>