force-app/main/default/objects/ServiceContract/fields/percentMonthlyHours__c.field-meta.xml
<CustomField>
    <fullName>percentMonthlyHours__c</fullName>
    <description>% Monthly Hours</description>
    <formula>RemainingMonthlyHours__c /  MonthlyHoursPerContract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Monthly Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>