force-app/main/default/objects/ServiceContract/fields/percentTotalHours__c.field-meta.xml
<CustomField>
    <fullName>percentTotalHours__c</fullName>
    <description>Percentage of remaining total hours by contract total hours</description>
    <formula>RemainingTotalHours__c /  TotalHoursPerContract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>