force-app/main/default/objects/ServiceContract/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <label>RecordTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>