force-app/main/default/objects/ServiceContract/fields/RemainingMonthlyHours__c.field-meta.xml
<CustomField>
    <fullName>RemainingMonthlyHours__c</fullName>
    <label>Remaining Monthly Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>