force-app/main/default/objects/ServiceContract/fields/RemainingTotalHours__c.field-meta.xml
<CustomField>
    <fullName>RemainingTotalHours__c</fullName>
    <label>Remaining Total Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>