force-app/main/default/objects/ServiceContract/fields/Task_Ray_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_Ray_ID__c</fullName>
    <externalId>true</externalId>
    <label>Task Ray ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>