force-app/main/default/objects/ServiceContract/fields/TotalHoursPerContract__c.field-meta.xml
<CustomField>
    <fullName>TotalHoursPerContract__c</fullName>
    <label>Total Hours Per Contract</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>